--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -15,7 +15,7 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="../icones/favicon-32x32.png" type="image/png">
+    <link rel="icon" href="../icons/favicon-32x32.png" type="image/png">
     <title>FitnessAndHealth</title>
     <script src = "../All/translate.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
@@ -26,7 +26,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed">
     <div class="container-fluid">
-        <img src="../icones/logo-green-no-text.png" alt="Home" width="50" height="50">
+        <img src="../icons/logo-green-no-text.png" alt="Home" width="50" height="50">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,37 +35,37 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="index.html">
-                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20">
+                        <img src="../icons/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20">
                         <span class="translate-text" data-key="home">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Shop/shop.html">
-                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
+                        <img src="../icons/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
                         <span class="translate-text" data-key="products">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
-                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20">
+                        <img src="../icons/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20">
                         <span class="translate-text" data-key="nutrition">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
-                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20">
+                        <img src="../icons/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20">
                         <span class="translate-text" data-key="training">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
-                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20">
+                        <img src="../icons/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20">
                         <span class="translate-text" data-key="about">Über uns</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Tracker/tracker.html">
-                        <img src="../icones/tracker_picture.svg" class="changeColor" alt="Tracker" width="20" height="20">
+                        <img src="../icons/tracker_picture.svg" class="changeColor" alt="Tracker" width="20" height="20">
                         <span class="translate-text" data-key="tracker">Tracker</span>
                     </a>
                 </li>
@@ -83,7 +83,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="#" id="login-button-link">
-                        <img src="../icones/login-picture.svg" class="changeColor" alt="Login Icon" width="20" height="20">
+                        <img src="../icons/login-picture.svg" class="changeColor" alt="Login Icon" width="20" height="20">
                         <span class="translate-text" data-key="login" id="login-button">Login</span>
                     </a>
                 </li>
@@ -97,13 +97,13 @@
         <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../icones/leo-pitcture.jpg" class="d-block w-100" alt="Individuelles Training">
+                    <img src="../icons/leo-picture.jpg" class="d-block w-100" alt="Individuelles Training">
                 </div>
                 <div class="carousel-item">
-                    <img src="../icones/healthy-food.jpg" class="d-block w-100" alt="Gesunde Ernährung">
+                    <img src="../icons/healthy-food.jpg" class="d-block w-100" alt="Gesunde Ernährung">
                 </div>
                 <div class="carousel-item">
-                    <img src="../icones/man-trained.jpg" class="d-block w-100" alt="Persönlicher Support">
+                    <img src="../icons/man-trained.jpg" class="d-block w-100" alt="Persönlicher Support">
                 </div>
             </div>
         </div>
@@ -216,7 +216,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="../icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
+                    <img src="../icons/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
                 </div>
             </div>
         </div>
