--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title data-key="page-title">Trainingspläne</title>
-    <link rel="icon" href="../icones/favicon-32x32.png" type="image/png">
+    <link rel="icon" href="../icons/favicon-32x32.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-training-plans.css">
@@ -17,7 +17,7 @@
 <!-- Sticky Top Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast">
     <div class="container-fluid">
-        <img src="../icones/logo-green-no-text.png" alt="Home" width="50" height="50">
+        <img src="../icons/logo-green-no-text.png" alt="Home" width="50" height="50">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,37 +26,37 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Mainpage/index.html">
-                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Home" width="20" height="20">
+                        <img src="../icons/bxs-home.svg" class="changeColor" alt="Home" width="20" height="20">
                         <span class="translate-text" data-key="nav-home">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Shop/shop.html">
-                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
+                        <img src="../icons/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
                         <span class="translate-text" data-key="nav-products">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
-                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Nutrition Plans" width="20" height="20">
+                        <img src="../icons/bx-baguette.svg" class="changeColor" alt="Nutrition Plans" width="20" height="20">
                         <span class="translate-text" data-key="nav-nutrition">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="trainings-plan.html">
-                        <img src="../icones/bx-run.svg" class="changeColor" alt="Training Plans" width="20" height="20">
+                        <img src="../icons/bx-run.svg" class="changeColor" alt="Training Plans" width="20" height="20">
                         <span class="translate-text" data-key="nav-training">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
-                        <img src="../icones/bxs-group.svg" class="changeColor" alt="About Us" width="20" height="20">
+                        <img src="../icons/bxs-group.svg" class="changeColor" alt="About Us" width="20" height="20">
                         <span class="translate-text" data-key="nav-about">Über uns</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Tracker/tracker.html">
-                        <img src="../icones/tracker_picture.svg" class="changeColor" alt="Tracker" width="20" height="20">
+                        <img src="../icons/tracker_picture.svg" class="changeColor" alt="Tracker" width="20" height="20">
                         <span class="translate-text" data-key="tracker">Tracker</span>
                     </a>
                 </li>
@@ -74,7 +74,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="#">
-                        <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
+                        <img src="../icons/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
                         <span class="translate-text" data-key="login" id="login-button">Login</span>
                     </a>
                 </li>
@@ -230,7 +230,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="../icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
+                    <img src="../icons/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%" alt="logo">
                 </div>
 
             </div>
