--- a/fitness-and-health-website/AboutUs/about-us.html
+++ b/fitness-and-health-website/AboutUs/about-us.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="../icones/favicon-32x32.png" type="image/png">
+    <link rel="icon" href="../icons/favicon-32x32.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast">
     <div class="container-fluid">
-        <img src="../icones/logo-green-no-text.png" alt="Home" width="50" height="50">
+        <img src="../icons/logo-green-no-text.png" alt="Home" width="50" height="50">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,32 +33,32 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Mainpage/index.html">
-                        <img src="../icones/bxs-home.svg" class="changeColor translate-text" alt="Shop" width="20" height="20"> <span data-translate="true">Startseite</span>
+                        <img src="../icons/bxs-home.svg" class="changeColor translate-text" alt="Shop" width="20" height="20"> <span data-translate="true">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Shop/shop.html">
-                        <img src="../icones/bx-shopping-bag.svg" class="changeColor translate-text" alt="Shop" width="20" height="20"> <span data-translate="true">Produkte</span>
+                        <img src="../icons/bx-shopping-bag.svg" class="changeColor translate-text" alt="Shop" width="20" height="20"> <span data-translate="true">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
-                        <img src="../icones/bx-baguette.svg" class="changeColor translate-text" alt="Ernährungspläne" width="20" height="20"> <span data-translate="true">Ernährungspläne</span>
+                        <img src="../icons/bx-baguette.svg" class="changeColor translate-text" alt="Ernährungspläne" width="20" height="20"> <span data-translate="true">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
-                        <img src="../icones/bx-run.svg" class="changeColor translate-text" alt="Trainingspläne" width="20" height="20"> <span data-translate="true">Trainingspläne</span>
+                        <img src="../icons/bx-run.svg" class="changeColor translate-text" alt="Trainingspläne" width="20" height="20"> <span data-translate="true">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="about-us.html">
-                        <img src="../icones/bxs-group.svg" class="changeColor translate-text" alt="Über uns" width="20" height="20"> <span data-translate="true">Über uns</span>
+                        <img src="../icons/bxs-group.svg" class="changeColor translate-text" alt="Über uns" width="20" height="20"> <span data-translate="true">Über uns</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Tracker/tracker.html">
-                        <img src="../icones/tracker_picture.svg" class="changeColor" alt="Tracker" width="20" height="20">
+                        <img src="../icons/tracker_picture.svg" class="changeColor" alt="Tracker" width="20" height="20">
                         <span class="translate-text" data-key="tracker">Tracker</span>
                     </a>
                 </li>
@@ -76,7 +76,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="#" id="login-button-link">
-                        <img src="../icones/login-picture.svg" class="changeColor" alt="Login Icon" width="20" height="20">
+                        <img src="../icons/login-picture.svg" class="changeColor" alt="Login Icon" width="20" height="20">
                         <span class="translate-text" data-key="login" id="login-button">Login</span>
                     </a>
                 </li>
@@ -92,7 +92,7 @@
     <div class="row align-items-center mb-5">
         <div class="col-md-4 text-center">
             <button class="btn styleForButtonInAboutUsLeft">
-                <img src="../icones/JanBild.png" alt="Jan picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
+                <img src="../icons/JanBild.png" alt="Jan picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
                 <p class="styleForPInAboutUs"><span data-translate="true">Jan Brunner</span><br><span data-translate="true">Projektleiter</span></p>
             </button>
         </div>
@@ -107,7 +107,7 @@
     <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-4 text-center">
             <button class="btn styleForButtonInAboutUsRight">
-                <img src="../icones/LorenzBild.jpg" alt="Lorenz picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
+                <img src="../icons/LorenzBild.JPG" alt="Lorenz picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
                 <p class="styleForPInAboutUs"><span data-translate="true">Lorenz Parzer</span><br><span data-translate="true">Stellvertretender Projektleiter</span></p>
             </button>
         </div>
@@ -122,7 +122,7 @@
     <div class="row align-items-center mb-5">
         <div class="col-md-4 text-center">
             <button class="btn styleForButtonInAboutUsLeft">
-                <img src="../icones/ErnadPhoto.jpg" alt="Ernad picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
+                <img src="../icons/ErnadPhoto.jpg" alt="Ernad picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
                 <p class="styleForPInAboutUs"><span data-translate="true">Ernad Music</span><br><span data-translate="true">Mitarbeiter</span></p>
             </button>
         </div>
@@ -137,7 +137,7 @@
     <div class="row align-items-center mb-5 flex-md-row-reverse">
         <div class="col-md-4 text-center">
             <button class="btn styleForButtonInAboutUsRight">
-                <img src="../icones/MarioBild.jpg" alt="Mario picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
+                <img src="../icons/MarioBild.jpg" alt="Mario picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
                 <p class="styleForPInAboutUs"><span data-translate="true">Mario Solomun</span><br><span data-translate="true">Mitarbeiter</span></p>
             </button>
         </div>
@@ -208,7 +208,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="../icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
+                    <img src="../icons/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%" alt="">
                 </div>
             </div>
         </div>
