--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="../icones/favicon-32x32.png" type="image/png">
+    <link rel="icon" href="../icons/favicon-32x32.png" type="image/png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast" >
     <div class="container-fluid">
 
-        <img src="../icones/logo-green-no-text.png" alt="Home" width="50" height="50">
+        <img src="../icons/logo-green-no-text.png" alt="Home" width="50" height="50">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,32 +32,32 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Mainpage/index.html">
-                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true" class = "translate-text">Startseite</span>
+                        <img src="../icons/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true" class = "translate-text">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar"  href="../Shop/shop.html">
-                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true" class = "translate-text">Produkte</span>
+                        <img src="../icons/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true" class = "translate-text">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="nutrition.html">
-                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> <span data-translate="true" class = "translate-text">Ernährungspläne</span>
+                        <img src="../icons/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> <span data-translate="true" class = "translate-text">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
-                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> <span data-translate="true" class = "translate-text">Trainingspläne</span>
+                        <img src="../icons/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> <span data-translate="true" class = "translate-text">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
-                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> <span data-translate="true" class = "translate-text">Über uns</span>
+                        <img src="../icons/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> <span data-translate="true" class = "translate-text">Über uns</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Tracker/tracker.html">
-                        <img src="../icones/tracker_picture.svg" class="changeColor" alt="Tracker" width="20" height="20">
+                        <img src="../icons/tracker_picture.svg" class="changeColor" alt="Tracker" width="20" height="20">
                         <span class="translate-text" data-key="tracker">Tracker</span>
                     </a>
                 </li>
@@ -75,7 +75,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="">
-                        <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
+                        <img src="../icons/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
                         <span class="translate-text" data-key="login" id="login-button">Login</span>
                     </a>
                 </li>
@@ -236,7 +236,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="../icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
+                    <img src="../icons/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%" alt="logo">
                 </div>
             </div>
         </div>
