--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title data-translate="true">Shop</title>
-    <link rel="icon" href="../icones/favicon-32x32.png" type="image/png">
+    <link rel="icon" href="../icons/favicon-32x32.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-shop.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast">
     <div class="container-fluid">
-        <img src="../icones/logo-green-no-text.png" alt="Home" width="50" height="50">
+        <img src="../icons/logo-green-no-text.png" alt="Home" width="50" height="50">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,37 +27,37 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Mainpage/index.html">
-                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20">
+                        <img src="../icons/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20">
                         <span class="translate-text" data-translate="true">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="shop.html">
-                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
+                        <img src="../icons/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
                         <span class="translate-text" data-translate="true">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
-                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20">
+                        <img src="../icons/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20">
                         <span class="translate-text" data-translate="true">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
-                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20">
+                        <img src="../icons/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20">
                         <span class="translate-text" data-translate="true">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
-                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20">
+                        <img src="../icons/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20">
                         <span class="translate-text" data-translate="true">Über uns</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Tracker/tracker.html">
-                        <img src="../icones/tracker_picture.svg" class="changeColor" alt="Tracker" width="20" height="20">
+                        <img src="../icons/tracker_picture.svg" class="changeColor" alt="Tracker" width="20" height="20">
                         <span class="translate-text" data-key="tracker">Tracker</span>
                     </a>
                 </li>
@@ -75,7 +75,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="">
-                        <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
+                        <img src="../icons/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
                         <span class="translate-text" data-key="login" id="login-button">Login</span>
                     </a>
                 </li>
@@ -88,7 +88,7 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="image-container">
-                <img src="../icones/shop-picture.jpg" class="img">
+                <img src="../icons/shop-picture.jpg" class="img">
                 <div class="image-text">
                     <h1 class="picture-header translate-text" data-translate="true">Willkommen</h1>
                     <h2 class="picture-subheader translate-text" data-translate="true">Fitness&Health Produkte</h2>
@@ -97,7 +97,7 @@
         </div>
         <div class="carousel-item">
             <div class="image-container">
-                <img src="../icones/background-for-shop-weights.jpg" class="img">
+                <img src="../icons/background-for-shop-weights.jpg" class="img">
                 <div class="image-text">
                     <h1 class="picture-header translate-text" data-translate="true">Willkommen</h1>
                     <h2 class="picture-subheader translate-text" data-translate="true">Fitness&Health Produkte</h2>
@@ -106,7 +106,7 @@
         </div>
         <div class="carousel-item">
             <div class="image-container">
-                <img src="../icones/shop-background-picture-runners-and-weights.jpg" class="img">
+                <img src="../icons/shop-background-picture-runners-and-weights.jpg" class="img">
                 <div class="image-text">
                     <h1 class="picture-header translate-text" data-translate="true">Willkommen</h1>
                     <h2 class="picture-subheader translate-text" data-translate="true">Fitness&Health Produkte</h2>
@@ -115,7 +115,7 @@
         </div>
         <div class="carousel-item">
             <div class="image-container">
-                <img src="../icones/background-shop-letters.jpg" class="img">
+                <img src="../icons/background-shop-letters.jpg" class="img">
                 <div class="image-text">
                     <h1 class="picture-header translate-text" data-translate="true">Willkommen</h1>
                     <h2 class="picture-subheader translate-text" style="font-family: sans-serif" data-translate="true">Fitness&Health Produkte</h2>
@@ -263,7 +263,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="../icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
+                    <img src="../icons/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
                 </div>
             </div>
         </div>
