--- a/fitness-and-health-website/Tracker/tracker.html
+++ b/fitness-and-health-website/Tracker/tracker.html
@@ -98,7 +98,7 @@
         <h4 class="translate-text">Ziel entfernen</h4>
         <div class="input-group mb-3">
             <input type="text" id="deleteGoalInput" class="form-control translate-text" placeholder="Neues Ziel eingeben">
-            <button class="btn btn-success translate-text" id="deleteGoalBtn" type="button">Ziel Hinzufügen</button>
+            <button class="btn btn-success translate-text" id="deleteGoalBtn" type="button">Ziel entfernen</button>
         </div>
     </div>
 </div>
