translated the dynamic inserted table

--- a/fitness-and-health-website/Tracker/tracker.html
+++ b/fitness-and-health-website/Tracker/tracker.html
@@ -96,14 +96,14 @@
             <div class="col-md-6 mb-3">
                 <label class="form-label translate-text">Neues Ziel hinzufügen</label>
                 <div class="input-group">
-                    <input type="text" id="newGoalInput" class="form-control translate-text" placeholder="Neues Ziel eingeben">
+                    <input type="text" id="newGoalInput" class="form-control translate-text" placeholder="+">
                     <button class="btn btn-success translate-text" id="addGoalBtn" type="button">Hinzufügen</button>
                 </div>
             </div>
             <div class="col-md-6 mb-3">
                 <label class="form-label translate-text">Ziel entfernen</label>
                 <div class="input-group">
-                    <input type="text" id="deleteGoalInput" class="form-control translate-text" placeholder="Ziel eingeben">
+                    <input type="text" id="deleteGoalInput" class="form-control translate-text" placeholder="-">
                     <button class="btn btn-warning translate-text" id="deleteGoalBtn" type="button">Entfernen</button>
                 </div>
             </div>
