Fixed some warnings

--- a/fitness-and-health-website/AboutUs/about-us.html
+++ b/fitness-and-health-website/AboutUs/about-us.html
@@ -155,7 +155,7 @@
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5; font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-footer" style="color: #F6E8D5; font-family: sans-serif">
                         <span data-translate="true">Unsere Welt</span>
                     </h5>
 
@@ -183,7 +183,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-footer" style="font-family: sans-serif">
                         <span data-translate="true">Karriere</span>
                     </h5>
 
@@ -197,7 +197,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-footer" style="font-family: sans-serif">
                         <span data-translate="true">Kontaktiere uns</span>
                     </h5>
 
