--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -196,7 +196,7 @@
             <div class="row">
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" data-key="footer-our-world" style="color: #F6E8D5;">Unsere Welt</h5>
+                    <h5 class="text-uppercase mb-4 text-in-footer translate-text" data-key="footer-our-world" style="color: #F6E8D5;">Unsere Welt</h5>
                     <ul class="list-unstyled mb-4">
                         <li>
                             <a href="../Shop/shop.html" class="hover-effects translate-text" data-key="footer-products">Produkte</a>
@@ -214,7 +214,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" data-key="footer-career">Karriere</h5>
+                    <h5 class="text-uppercase mb-4 text-in-footer translate-text" data-key="footer-career">Karriere</h5>
                     <ul class="list-unstyled">
                         <li>
                             <a href="#!" class="hover-effects translate-text" data-key="footer-jobs">Jobs</a>
@@ -223,7 +223,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" data-key="footer-contact-us">Kontaktiere uns</h5>
+                    <h5 class="text-uppercase mb-4 text-in-footer translate-text" data-key="footer-contact-us">Kontaktiere uns</h5>
                     <div class="form-outline form-white mb-4">
                         <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects translate-text" data-key="footer-click-here">Klicke hier</a>
                     </div>
