--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -163,7 +163,7 @@
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5; font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-footer" style="color: #F6E8D5; font-family: sans-serif">
                         <span data-translate="true" class = "translate-text">Unsere Welt</span>
                     </h5>
 
@@ -191,7 +191,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-footer" style="font-family: sans-serif">
                         <span data-translate="true" class = "translate-text">Karriere</span>
                     </h5>
 
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-footer" style="font-family: sans-serif">
                         <span data-translate="true" class = "translate-text">Kontaktiere uns</span>
                     </h5>
 
