--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -210,7 +210,7 @@
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" style="color: #F6E8D5; font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-footer translate-text" style="color: #F6E8D5; font-family: sans-serif">
                         <span data-translate="true">Unsere Welt</span>
                     </h5>
 
@@ -238,7 +238,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" style="font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-footer translate-text" style="font-family: sans-serif">
                         <span data-translate="true">Karriere</span>
                     </h5>
 
@@ -252,7 +252,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" style="font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-footer translate-text" style="font-family: sans-serif">
                         <span data-translate="true">Kontaktiere uns</span>
                     </h5>
 
