--- a/fitness-and-health-website/Tracker/tracker.html
+++ b/fitness-and-health-website/Tracker/tracker.html
@@ -124,7 +124,7 @@
             <div class="row">
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" style="color: #F6E8D5;">Unsere Welt</h5>
+                    <h5 class="text-uppercase mb-4 text-in-footer translate-text" style="color: #F6E8D5;">Unsere Welt</h5>
                     <ul class="list-unstyled mb-4">
                         <li>
                             <a href="../Shop/shop.html" class="hover-effects"><span class = "translate-text">Produkte</span></a>
@@ -143,24 +143,24 @@
                 <!--Grid column-->
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text">Karriere</h5>
+                    <h5 class="text-uppercase mb-4 text-in-footer translate-text">Karriere</h5>
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#!" class="hover-effects translate-text">Jobs</a>
+                            <a href="#" class="hover-effects translate-text">Jobs</a>
                         </li>
                     </ul>
                 </div>
                 <!--Grid column-->
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text">Kontaktiere uns</h5>
+                    <h5 class="text-uppercase mb-4 text-in-footer translate-text">Kontaktiere uns</h5>
                     <div class="form-outline form-white mb-4">
                         <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects translate-text">Klicke hier</a>
                     </div>
                 </div>
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="../icons/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
+                    <img src="../icons/logo-green-no-text.png" alt = "Logo" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
                 </div>
             </div>
             <!--Grid row-->
@@ -170,7 +170,7 @@
 </div>
 
 
-<script src="../Tracker/api.js"></script>
+
 
 <script src="../Tracker/tracker.js"></script>
 </body>
