--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -127,7 +127,7 @@
 
 <div class="top-search-products">
     <br><br>
-    <h1 class="title-shop product-title" style="text-align: center;" data-translate="true">Produkte</h1>
+    <h1 class="title-shop product-title translate-text" style="text-align: center;" data-translate="true">Produkte</h1>
 </div>
 
 <div class="container mt-5">
