--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -122,7 +122,7 @@
                         <span data-translate="true" class = "translate-text">Geschlecht</span>
                     </label>
                     <select class="form-select" id="gender" required style="font-family: sans-serif">
-                        <option value="" disabled selected>Wähle dein Geschlecht class = "translate-text"</option>
+                        <option value="" class = "translate-text" disabled selected>Wähle dein Geschlecht </option>
                         <option value="Männlich" class = "translate-text">Männlich</option>
                         <option value="Weiblich" class = "translate-text">Weiblich</option>
                     </select>
