the shop works. DO NOT TOUCH IT

--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -151,7 +151,7 @@
 
                         </select>
                     </div>
-                    <button type="button" class="btn btn-custom w-100 translate-text" data-translate="true" id = "submit-button" onclick=applyFilters()>Absenden</button>
+                    <button type="button" class="btn btn-custom w-100 translate-text" data-translate="true" id = "submit-button" onclick="">Absenden</button>
                 </form>
             </div>
         </div>
